2004-11-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaDatatype.cs : added ParseValue() override.
	* XmlSchemaSimpleTypeList.cs,
	  XmlSchemaSimpleTypeUnion.cs : #if NET_2_0 some private fields,
	  just for eliminating warnings :(
	* XmlSchemaSet.cs : commented some fields currently not in use.
	  It is for eliminating warnings.
	* XmlSchemaSimpleTypeRestriction.cs : removed exception field name
	  to eliminate warning.
	* XmlSchemaException.cs : hasLineInfo is also runtime serialized now.

2004-11-22  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaException.cs : Message is only 1.x (not 2.0).
	* XmlSchemaInference.cs : use more static readonly QName fields.
	  Type merge inference now traverses every base types.
	* XmlSchemaInfo.cs : added new file.

2004-11-18  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaException.cs : added .ctor(string).
	* XmlSchemaInferenceException.cs : use base.ctor(string).
	* XmlSchemaValidationException.cs : It is 2.0 class. Added some .ctor()

2004-11-18  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaCollection.cs : obsolete.
	* XmlSchemaInference.cs :
	  Fixed typo in enum. It is still MonoTODO. Reformatted code a bit.

2004-11-17  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSet.cs : don't set TargetNamespace = "".

2004-11-17  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaInferenceDesign.txt : added (incomplete though.)

2004-11-17  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidationException.cs : added.

2004-11-17  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaInference.cs,
	  XmlSchemaInferenceException.cs : added.

2004-11-17  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaException.cs : removed get_Message in 2.0 profile (all done
	  in .ctor()).

2004-11-08  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSet.cs : use NameTable when creating XmlTextReader.

2004-11-05  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaSet.cs : reduced extraneous XmlSchemaObjectTable creation.
